# gazebo_modeling_test

./: README.md
deliver_simulations/: CMakeLists.txt  package.xml
deliver_simulations/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers(backup).yaml  ros_controllers.yaml  sensors_3d.yaml  turtlebot3_my_model.srdf
deliver_simulations/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  (+6 more)
my_simulations/: CMakeLists.txt  package.xml
my_simulations/config/: control.yaml  initial.yaml
my_simulations/launch/: arm_control.launch  my_world.launch  spawm.launch  test.launch  testbot.launch
my_simulations/launch/includes/: description.launch.xml
my_simulations/models/my_model/: model.config  model.sdf  model_test.sdf
my_simulations/models/my_model/meshes/: bottom.STL
my_simulations/models/turtlebot3_my_model/: model.sdf
my_simulations/src/: turtlebot3_arm.py
my_simulations/urdf/: robot.urdf.xacro  turtlebot3_my_model(backup).gazebo.xacro  turtlebot3_my_model(backup).urdf.xacro  turtlebot3_my_model(backup2).urdf.xacro  turtlebot3_my_model.gazebo.xacro  turtlebot3_my_model.urdf.xacro
my_simulations/worlds/: empty_world.world  empty_world1.world
yaml file/: costmap_common_params_my_model.yaml  dwa_local_planner_params_my_model.yaml
